--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "less": "3.12.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -18,7 +19,14 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "axios": "^0.19.2",
+    "element-ui": "^2.13.2",
+    "less-loader": "^4.1.0",
+    "marked": "^1.1.1",
+    "vue": "^2.5.2",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.5.1"
   },
   "eslintConfig": {
     "root": true,
